--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@
 
 <body >
     <header>
-        <br>
         <img class ="Vemo_img"  src="img/VEMO_Logo.jpg" alt = "VeMo Group" />
         <br>
-        <h1> Formulario de asignación de turnos</h1>
-        <br>
+        <h1> Asignación de turnos</h1>
         <hr color="black">
     </header>
 
@@ -193,7 +191,7 @@
 
     <br>
     
-    <p> Ante dudas o consultas contactar por mail: 
+    <p> Ante dudas o consultas contacto: 
     <a href="mailto:leandro.sinagra@35south.global"> Click aquí </a>
     </p>
     
